feat(checkstyle): add method length checkstyle rule and refactor code for compliance